feat: added project images

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <hr>
               <section class="horizontal-card section">
                 <div class="project-image">
-                    <img src="images/project.svg" alt="">
+                    <img src = "images/project1.png" alt="images/project.svg">
                 </div>
                 <div class="project-info">
                     <div class="section-title">
@@ -194,7 +194,7 @@
             <hr>
             <section class="horizontal-card section">
                 <div class="project-image">
-                    <img src="images/project.svg" alt="">
+                    <img src="images/project2.png" alt="images/project.svg">
                 </div>
                 <div class="project-info">
                     <div class="section-title">
@@ -215,11 +215,31 @@
             <hr>
             <section class="horizontal-card section">
                 <div class="project-image">
-                    <img src="images/project.svg" alt="">
+                    <img src="images/project3.png" alt="images/project.svg">
                 </div>
                 <div class="project-info">
                     <div class="section-title">
                         Project 3
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Minion Talk</h3>
+                        <h5><a href="https://github.com/SarthakSam/banana-speak/">Github Link</a></h5>
+                        <h5><a href="https://sarthaks-minion-speak.netlify.app/">Project Link</a></h5>
+                        <article>
+                            Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src = "images/project4.PNG" alt="images/project.svg">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 4
                     </div>
                     <hr>
                     <div class="card">
