--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@
                             ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
                             “Edit Text” or double click me and you can start adding your own content and make
                             changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                            I’m a great place for you to write more. Tell a story about yourself. ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                            “Edit Text” or double click me and you can start adding your own content and make
+                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
                             I’m a great place for you to write more. Tell a story about yourself. <a href="">Read more</a>
                         </article>
                     </div>
@@ -292,6 +295,9 @@
                         <h3>Dummy blog 2</h3>
                         <article>
                             ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
+                            “Edit Text” or double click me and you can start adding your own content and make
+                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                            I’m a great place for you to write more. Tell a story about yourself.  ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
                             “Edit Text” or double click me and you can start adding your own content and make
                             changes to the font. Feel free to drag and drop me anywhere you like on your page.
                             I’m a great place for you to write more. Tell a story about yourself. <a href="">Read more</a>
