Feat: added projects and changed order of them

--- a/index.html
+++ b/index.html
@@ -171,13 +171,74 @@
         <main class="projects page">
             <h1>Latest Projects</h1>
             <hr>
-              <section class="horizontal-card section">
+            <section class="horizontal-card section">
                 <div class="project-image">
-                    <img src = "images/project1.png" alt="images/project.svg">
+                    <img src="images/project5.png" alt="images/project.svg">
                 </div>
                 <div class="project-info">
                     <div class="section-title">
-                        Project 1
+                        Project 5
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>English Translation app</h3>
+                        <h5><a href="https://github.com/SarthakSam/translate-english">Github Link</a></h5>
+                        <h5><a href="https://english-translator.netlify.app">Project Link</a></h5>
+                        <article>
+                            This app allows you to translate english into a no of different languages using the fun-translations api.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project4.png" alt="images/project.svg">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 4
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Minion Talk</h3>
+                        <h5><a href="https://github.com/SarthakSam/banana-speak/">Github Link</a></h5>
+                        <h5><a href="https://sarthaks-minion-speak.netlify.app/">Project Link</a></h5>
+                        <article>
+                            Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project3.png" alt="images/project.svg">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 3
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>CLI Quiz app</h3>
+                        <h5><a href="https://github.com/SarthakSam/quiz-maker-and-taker">Github Link</a></h5>
+                        <h5><a href="https://repl.it/@SarthakSam/SkinnyAquaRuntime#index.js?embed=1&output=1">Project Link</a></h5>
+                        <article>
+                            This cli app allows you to make your own quiz on any topic and share it with your friends and challenge them with a fun quiz. 
+                            Also you can select any quiz from all the available quizes and test your knowledge. The Quiz is made using nodejs and works on nodejs cli.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src = "images/project2.png" alt="images/project.svg">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 2
                     </div>
                     <hr>
                     <div class="card">
@@ -194,52 +255,11 @@
             <hr>
             <section class="horizontal-card section">
                 <div class="project-image">
-                    <img src="images/project2.png" alt="images/project.svg">
+                    <img src = "images/project1.png" alt="images/project.svg">
                 </div>
                 <div class="project-info">
                     <div class="section-title">
-                        Project 2
-                    </div>
-                    <hr>
-                    <div class="card">
-                        <h3>CLI Quiz app</h3>
-                        <h5><a href="https://github.com/SarthakSam/quiz-maker-and-taker">Github Link</a></h5>
-                        <h5><a href="https://repl.it/@SarthakSam/SkinnyAquaRuntime#index.js?embed=1&output=1">Project Link</a></h5>
-                        <article>
-                            This cli app allows you to make yur own quiz on any topic and share it with your friends and challenge them with a fun quiz. 
-                            Also you can select any quiz from all the available quizes and test your knowledge. The Quiz is made using nodejs and works on nodejs cli.
-                        </article>
-                    </div>
-                </div>
-            </section>
-            <hr>
-            <section class="horizontal-card section">
-                <div class="project-image">
-                    <img src="images/project3.png" alt="images/project.svg">
-                </div>
-                <div class="project-info">
-                    <div class="section-title">
-                        Project 3
-                    </div>
-                    <hr>
-                    <div class="card">
-                        <h3>Minion Talk</h3>
-                        <h5><a href="https://github.com/SarthakSam/banana-speak/">Github Link</a></h5>
-                        <h5><a href="https://sarthaks-minion-speak.netlify.app/">Project Link</a></h5>
-                        <article>
-                            Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak.
-                        </article>
-                    </div>
-                </div>
-            </section>
-            <hr>
-            <section class="horizontal-card section">
-                <div class="project-image">
-                    <img src = "images/project4.PNG" alt="images/project.svg">
-                </div>
-                <div class="project-info">
-                    <div class="section-title">
-                        Project 4
+                        Project 1
                     </div>
                     <hr>
                     <div class="card">
@@ -253,7 +273,6 @@
                     </div>
                 </div>
             </section>
-            <hr>
         </main>
         <main class="blogs page">
             <h1>All Blogs</h1>
