feat: added project 6 and project 7

--- a/index.html
+++ b/index.html
@@ -173,6 +173,46 @@
             <hr>
             <section class="horizontal-card section">
                 <div class="project-image">
+                    <img src="images/project7.png" alt="images/project.svg">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 7
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Travel Suggestions app</h3>
+                        <h5><a href="https://codesandbox.io/s/travel-suggestions-app-nkq03">Code Link</a></h5>
+                        <h5><a href="https://nkq03.csb.app/">Project Link</a></h5>
+                        <article>
+                            This app suggests you different locations you can travel to based on your interests.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
+                    <img src="images/project6.png" alt="images/project.svg">
+                </div>
+                <div class="project-info">
+                    <div class="section-title">
+                        Project 6
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <h3>Emoji Translation app</h3>
+                        <h5><a href="https://codesandbox.io/s/emoji-translation-app-7wd5n">Code Link</a></h5>
+                        <h5><a href="https://7wd5n.csb.app/">Project Link</a></h5>
+                        <article>
+                            This app allows you to find meaning of different emojis that you use.
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="horizontal-card section">
+                <div class="project-image">
                     <img src="images/project5.png" alt="images/project.svg">
                 </div>
                 <div class="project-info">
