Feat: added first blog

--- a/index.html
+++ b/index.html
@@ -327,15 +327,19 @@
                     </div>
                     <hr>
                     <div class="card">
-                        <h3>Dummy Blog 1</h3>
+                        <h3>Concurreny Model in Javascript</h3>
                         <article>
-                            ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                            “Edit Text” or double click me and you can start adding your own content and make
-                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                            I’m a great place for you to write more. Tell a story about yourself. ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
-                            “Edit Text” or double click me and you can start adding your own content and make
-                            changes to the font. Feel free to drag and drop me anywhere you like on your page.
-                            I’m a great place for you to write more. Tell a story about yourself. <a href="">Read more</a>
+                            In this article we are going to find out how Javascript implements concurrency and what is event loop and much more...
+                            <br>
+                            So first of all what we all know about Javascrpit is that it is -
+                            <ul>
+                                <li> <strong>single-threaded</strong> which means 2 statements cannot be executed simultaneously, </li>
+                                <li> <strong>non-blocking</strong> which means execution of some code should not stop the execution of program because its too slow making the browser unresponsive, </li>
+                                <li> <strong>asynchronous</strong> which means that 2 or more tasks can be done simultaneously, </li>
+                                <li> <strong>concurrent</strong> means multiple computations can happen at same time. </li>
+                            </ul>
+                            Since Javascript is single-threaded, then how does it execute statements asynchronously?
+                            <a href="https://dev.to/sarthaksam/javascript-concurrency-model-4hod">Read more</a>
                         </article>
                     </div>
                 </div>
@@ -351,7 +355,7 @@
                     </div>
                     <hr>
                     <div class="card">
-                        <h3>Dummy blog 2</h3>
+                        <h3>Dummy blog</h3>
                         <article>
                             ​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click
                             “Edit Text” or double click me and you can start adding your own content and make
