Feat: changed profile pic

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <main class="home page">
             <aside class="profile-image">
-                <img src="./images/sarthak-kapoor.jpg" alt="">
+                <img src="./images/sarthak-kapoor.jpeg" alt="">
             </aside>
             <section class="about-me">
                 <h1>Hello,</h1>
