--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
     <link rel="stylesheet" href="home-section.css">
     <link rel="stylesheet" href="resume-section.css">
     <link rel="stylesheet" href="projects-section.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
     <div class="container">
-        <header>
-            <div class="title">
-                <h2 onclick="changePage('home')"><a href="#home"> Sarthak Kapoor</a></h2>
-            </div>
-            <nav class="nav">
-                <ul class="list ">
-                    <li class="list-item home-link" onclick="changePage('home')"><a href="#home"> Home</a></li>
-                    <li class="list-item resume-link" onclick="changePage('resume')"><a href="#resume"> Resume</a></li>
-                    <li class="list-item projects-link" onclick="changePage('projects')"><a href="#projects" > Projects</a></li>
-                    <li class="list-item blogs-link" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
-                    <!-- <li class="list-item contact-link" onclick="changePage('contact')"><a href="#contact"> Contact</a></li> -->
-                </ul>
-            </nav>
-        </header>
+        <nav>
+            <label class="title" onclick="changePage('home')"><a href="#home"> Sarthak Kapoor</a></label>
+            <input type="checkbox" id="list-checkbox">
+            <label for="list-checkbox" id="list-icon">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </label>
+            <ul class="list">
+                <li class="list-item home-link" onclick="changePage('home')"><a href="#home"> Home</a></li>
+                <li class="list-item resume-link" onclick="changePage('resume')"><a href="#resume"> Resume</a></li>
+                <li class="list-item projects-link" onclick="changePage('projects')"><a href="#projects" > Projects</a></li>
+                <li class="list-item blogs-link" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
+                <!-- <li class="list-item contact-link" onclick="changePage('contact')"><a href="#contact"> Contact</a></li> -->
+            </ul>
+        </nav>
         <main class="home page">
             <aside class="profile-image">
                 <img src="./images/sarthak-kapoor.jpg" alt="">
