--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav>
+    <input type="checkbox" id="list-checkbox">
+    <nav>
+        <div class="container">
             <label class="title" onclick="changePage('home')"><a href="#home"> Sarthak Kapoor</a></label>
-            <input type="checkbox" id="list-checkbox">
             <label for="list-checkbox" id="list-icon">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </label>
@@ -29,7 +29,9 @@
                 <li class="list-item blogs-link" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
                 <!-- <li class="list-item contact-link" onclick="changePage('contact')"><a href="#contact"> Contact</a></li> -->
             </ul>
-        </nav>
+        </div>
+    </nav>
+    <div class="container">
         <main class="home page">
             <aside class="profile-image">
                 <img src="./images/sarthak-kapoor.jpg" alt="">
