--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <input type="checkbox" id="list-checkbox">
     <nav>
         <div class="container">
-            <label class="title" onclick="changePage('home')"><a href="#home"> Sarthak Kapoor</a></label>
+            <label class="title" onclick="loadHomePage()"><a href="#home"> Sarthak Kapoor</a></label>
             <label for="list-checkbox" id="list-icon">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </label>
             <ul class="list">
-                <li class="list-item home-link" onclick="changePage('home')"><a href="#home"> Home</a></li>
-                <li class="list-item resume-link" onclick="changePage('resume')"><a href="#resume"> Resume</a></li>
-                <li class="list-item projects-link" onclick="changePage('projects')"><a href="#projects" > Projects</a></li>
-                <li class="list-item blogs-link" onclick="changePage('blogs')"><a href="#blogs" > Blogs</a></li>
-                <!-- <li class="list-item contact-link" onclick="changePage('contact')"><a href="#contact"> Contact</a></li> -->
+                <li class="list-item home-link" onclick="loadPage('home')"><a href="#home"> Home</a></li>
+                <li class="list-item resume-link" onclick="loadPage('resume')"><a href="#resume"> Resume</a></li>
+                <li class="list-item projects-link" onclick="loadPage('projects')"><a href="#projects" > Projects</a></li>
+                <li class="list-item blogs-link" onclick="loadPage('blogs')"><a href="#blogs" > Blogs</a></li>
+                <!-- <li class="list-item contact-link" onclick="loadPage('contact')"><a href="#contact"> Contact</a></li> -->
             </ul>
         </div>
     </nav>
