--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <i class="fas fa-exclamation-circle"></i>
                         <h3>skills</h3>
                         <hr>
-                        <ul>
+                        <ul class="skills-list">
                             <li>Data Stuctures</li>
                             <li>algorithms</li>
                             <li>Java</li>
